removed text about OSX .app

--- a/docs/BatchRunGettingStarted/RepastBatchRunsGettingStarted.tex
+++ b/docs/BatchRunGettingStarted/RepastBatchRunsGettingStarted.tex
@@ -676,7 +676,7 @@ To launch the batch GUI from the eclipse launcher, open the launchers folder in 
 \end{figure}
 
 \subsection{Launching as a Standalone Application}
-To launch the batch GUI as a stand alone application navigate to where Repast Simphony is installed. On OSX, double click on the Batch Runner-1.0 application. On Windows or Linux, double click the batch\_runner.jar. 
+To launch the batch GUI as a stand alone application navigate to where Repast Simphony is installed. Double click the batch\_runner.jar. 
  
 \section{Running on a Cluster or HPC Machine}
 
