Added explanation that RandomHelper is statically imported into code blocks and how to include additional imports.

--- a/docs/Statecharts/Statecharts.tex
+++ b/docs/Statecharts/Statecharts.tex
@@ -219,7 +219,7 @@ A simple state looks like Figure~\ref{fig:simpleState}. At any one point in time
 \item[params] This is the model's \texttt{Parameters} object. As an example, a double valued parameter \texttt{dParam} can be retrieved with: \texttt{params.getDouble("dParam")}\footnote{See the source or JavaDoc for  \texttt{repast.simphony.parameter.Parameters} for all of the available methods.}.
 \end{description}
 
-As is the case with all types of action blocks, their logic can be specified using Java, Groovy or ReLogo\footnote{All action blocks also statically import \texttt{repast.simphony.essentials.RepastEssentials}, making the many convenience methods directly callable.}. Specifically, any Java, Groovy or ReLogo code can be used to express the behavior that should be executed upon entry to or exit from the state\footnote{When using the ReLogo option, the \texttt{agent} parameter is implicit so writing \texttt{customMethod()} is equivalent to \texttt{agent.customMethod()}.}.
+As is the case with all types of action blocks, their logic can be specified using Java, Groovy or ReLogo\footnote{All action blocks also statically import \texttt{repast.simphony.essentials.RepastEssentials} and \texttt{repast.simphony.random.RandomHelper}, making the many convenience methods directly callable (i.e., \texttt{nextDouble()} instead of \texttt{RandomHelper.nextDouble()}). If additional imports are required, specifying them as the first lines in an action block will make them available.}. Specifically, any Java, Groovy or ReLogo code can be used to express the behavior that should be executed upon entry to or exit from the state\footnote{When using the ReLogo option, the \texttt{agent} parameter is implicit so writing \texttt{customMethod()} is equivalent to \texttt{agent.customMethod()}.}.
 
 \begin{figure}
 \begin{center}
