updated to reflect external tools changes

--- a/docs/RepastJavaGettingStarted/RepastJavaGettingStarted.tex
+++ b/docs/RepastJavaGettingStarted/RepastJavaGettingStarted.tex
@@ -1045,18 +1045,12 @@ We can also directly connect to some external analysis tools (fig.~\ref{fig:exte
 
 \vspace{.2in}
 \begin{itemize}
-\item MatLab
-\item VisAD
-\item *ORA
-\item R
+\item RStudio Statistical Computing Application
 \item Spreadsheet (Excel by default)
-\item Grass (Open Source GIS Software)
 \item JUNG (Internal tools that provides some stats on networks)
-\item Terracotta
 \item Export a Geography Layer to a Shapefile
-\item Weka
-\item Pajek
-\item iReport
+\item Weka Data Mining Application
+\item Pajek Network Analysis Application
 \item SQL (Runs SQL like queries on simulation components -- contexts etc.)
 \end{itemize}
 \vspace{.2in}
