Modified the SD guide to not reference "new in this release".

--- a/docs/RepastSystemDynamics/RepastSystemDynamicsGettingStarted.tex
+++ b/docs/RepastSystemDynamics/RepastSystemDynamicsGettingStarted.tex
@@ -44,7 +44,7 @@
 \maketitle
 
 \section{System Dynamics in Repast Simphony}
-New to this release of Repast Simphony is support for developing System Dynamics models from scratch. This release also supports importing existing System Dynamics models into your projects and converting it to a format that can be displayed and manipulated by the System Dynamics Graphical User Interface (GUI). Given the set of equations of the System Dynamics model, Java source code is generated that implements the model. The standard generated code implements the Euler method directly. An alternate form generated for System Dynamics models that meet certain criteria (specified in a later section), is compatible with the Apache ODE Solver library.
+Repast Simphony supports developing System Dynamics models from scratch and also importing existing System Dynamics models into your projects and converting them to a format that can be displayed and manipulated by the System Dynamics Graphical User Interface (GUI). Given the set of equations of the System Dynamics model, Java source code is generated that implements the model. The standard generated code implements the Euler method directly. An alternate form generated for System Dynamics models that meet certain criteria (specified in a later section), is compatible with the Apache ODE Solver library.
 This tutorial presents the steps required to create a System Dynamics model in Repast Simphony.
 Figure 1 shows the layout of the System Dynamics GUI screen in the Eclipse IDE. The layout is similar to all other Repast Simphony models that are specified via Eclipse. The left-side panel contains all the Repast Simphony projects that have been defined. Displayed in area are all files related to the projects such as source code, generated code, output files, etc. The top-center panel is a tabbed panel in which source code and diagrams can be viewed and edited. Finally, the lower-right panel is a tabbed panel in which console output, search output, System Dynamics model variable properties, etc. will be displayed. The Eclipse IDE is highly configurable and the more experienced users will know that location of these areas can easily be moved into other configurations to suit the needs of the user.\\
 
