Fixed typo modes -> models.

--- a/docs/RepastFAQ/RepastSimphonyFAQ.tex
+++ b/docs/RepastFAQ/RepastSimphonyFAQ.tex
@@ -181,7 +181,7 @@ Your model now has been converted to ReLogo. You may find that there are a small
 Please see the ReLogo Getting Started Guide for information on how to operate and extend your model.
 \section{Programming with Repast Simphony}
 
-\subsection{Where can I find example modes for Repast Simphony}
+\subsection{Where can I find example models for Repast Simphony}
 \label{prs:examples}
 Repast Simphony offers a number of example models that you can import and run as follows:
 \begin{itemize}
