--- a/docs/RepastBatchHadoop/RepastBatchHadoop.tex
+++ b/docs/RepastBatchHadoop/RepastBatchHadoop.tex
@@ -38,7 +38,7 @@
 
 \title{Repast Simphony Batch Runs Using Hadoop}
 \author{Michael Henry and Don Bennett - Mitre, Nick Collier - Repast Development Team}
-\date{\today}                                           % Activate to display a given date or no date
+%\date{\today}                                           % Activate to display a given date or no date
 
 \begin{document} 
 \maketitle
